Dirty flies